--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-house-on-the-marsh-b-A-romance_71788
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 71788-h/images/cover.jpg
 creator:
   author:
     agent_name: Warden, Florence
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/6480
     wikipedia: https://en.wikipedia.org/wiki/Florence_Warden
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/71788#The-house-on-the-marsh-b-A-romance
 gutenberg_issued: '2023-10-03'
 identifiers:
   gutenberg: '71788'
